--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="_30898989">#30898989</color>
     <color name="greenblue">#386D77</color>
     <color name="orange">#D55A00</color>
+    <color name="blue087">#0871c2</color>
 </resources>
